# MeetixOS

./: .clang-format  .gitignore  CMakeLists.txt  README.md  b
Kernel/: CMakeLists.txt  build.sh
Kernel/EvaLoader/: CMakeLists.txt  init.cpp  loader.asm  loader.cpp  loader.hpp
Kernel/EvaShared/: BuildConfig.hpp  CMakeLists.txt
Kernel/EvangelionNG/: CMakeLists.txt  EvangelionNG.cpp  EvangelionNG.hpp  init.cpp
Kernel/Kernel/: CMakeLists.txt  EvangelionNG.cpp  EvangelionNG.hpp  LinkScript.ld  init.cpp
Kernel/Loader/: CMakeLists.txt  LinkScript.ld  init.cpp  loader.cpp  loader.hpp
Kernel/SMPStart/: CMakeLists.txt  smp.asm
Kernel/Shared/: CMakeLists.txt
Libs/: CMakeLists.txt
Libs/API/: CMakeLists.txt  CallVm86.c  CliArgsStore.c  Close.c  ConfigureProcess.c  CreateEmptyProcess.c  FsSetTransactionStatus.c  GetPidForTid.c  GetProcessDescriptor.c  GetProcessPids.c  GetThreadDescriptor.c  Getpid.c  IpcNextTopic.c  LowerFree.c  MapMmio.c  RamdiskChildAt.c  RamdiskInfo.c  RamdiskSpawn.c  ReadDirectory.c  ReceiveTransactionMessage.c  RegisterAsServer.c  RegisterIrqHandler.c  RegisterSignalHandler.c  Sbrk.c  SendMessage.c  ServerManage.c  SetVideoLog.c  SetWorkingDirectory.c  ShareMem.c  Spawn.c  TaskGetID.c  TaskGetIdentifier.c  Unmap.c  __AtomicLock.c  ename.c  syscall.c
Libs/C/: CMakeLists.txt  itanium_cxx_abi_support.c  main.c  pthread.c  test.c
Libs/CRT/: crt0.S  crti.S  crtn.S
Libs/CRTs/: CMakeLists.txt  crt0.S  crt0.cc  crti.S  crtn.S
Libs/GUI/: CMakeLists.txt  about.cpp  actioncomponent.cpp  boundseventcomponent.cpp  coloredcomponent.cpp  componentregistry.cpp  msgbox.cpp  notification.cpp  textfield.cpp  titledcomponent.cpp  ui.cpp  window.cpp
Libs/Graphics/: CMakeLists.txt  cairoutils.cpp  vbe.cpp
Libs/Headers/: Api.h  assert.h  complex.h  ctype.h  dir.h  dirent.h  dlfcn.h  endian.h  errno.h  fcntl.h  fenv.h  file.h  float.h  getopt.h  iconv.h  inttypes.h  libgen.h  limits.h  locale.h  malloc.h  math.h  pthread.h  sched.h  setjmp.h  signal.h  stdalign.h  stdbool.h  stdio.h  stdlib.h  string.h  strings.h  tgmath.h  time.h  unistd.h  wchar.h  wctype.h
Libs/IO/: mouse.cpp  ps2.cpp
Libs/Include/: Api.h  assert.h  complex.h  ctype.h  dir.h  dirent.h  dlfcn.h  endian.h  errno.h  eva.h  fcntl.h  fenv.h  file.h  float.h  inttypes.h  libgen.h  limits.h  locale.h  malloc.h  math.h  pthread.h  sched.h  setjmp.h  signal.h  stdalign.h  stdbool.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  tgmath.h  time.h  unistd.h  wchar.h  wctype.h
Libs/LibApi/: AllocMem.c  Api.h  AtomicBlock.c  AtomicLock.c  AtomicTryLock.c  AttachCreatedProcess.c  CMakeLists.txt  CallVm86.c  CancelProcessCreation.c  CliArgsRelease.c  CliArgsStore.c  CloneFd.c  Close.c  CloseDirectory.c  ConfigureProcess.c  CreateEmptyProcess.c  CreatePagesInSpace.c  CreateThread.c  Exit.c  Fork.c  FsCreateNode.c  FsRegisterAsDelegate.c  FsSetTransactionStatus.c  GetCreatedProcessID.c  GetExecutablePath.c  GetPciDevice.c  GetPciDeviceCount.c  GetPidForTid.c  GetProcessCount.c  GetProcessDescriptor.c  GetProcessPids.c  GetThreadCount.c  GetThreadDescriptor.c  GetThreadTids.c  GetTid.c  GetWorkingDirectory.c  Getpid.c  HaltSystem.c  IpcNextTopic.c  Join.c  (+133 more)
Libs/LibC/: CMakeLists.txt  MallocConfig.hh  OptionsParser.hh  _conformity.c  assert.cc  assert.h  cc_abi_support.cc  ctype.cc  ctype.h  dir.h  dirent.cc  dirent.h  dlfcn.cc  dlfcn.h  endian.h  errno.cc  errno.h  fcntl.cc  fcntl.h  fenv.cc  fenv.h  file.h  float.h  getopt.cc  getopt.h  iconv.h  inttypes.h  itanium_cxx_abi_support.c  lib.cc  libc_main.cc  libc_main_internal.hh  libgen.cc  libgen.h  limits.h  locale.cc  locale.h  main.c  main_internal.h  malloc.c  malloc.h  (+29 more)
Libs/LibFmtIO/: CMakeLists.txt  Err.cc  Out.cc  Out.hh  VOut.cc  VOut.hh
Libs/LibGUI/: About.cc  About.hh  Application.cc  Application.hh  ButtonList.cc  ButtonList.hh  ButtonMenu.cc  ButtonMenu.hh  CMakeLists.txt  MessageBox.cc  MessageBox.hh  Notification.cc  Notification.hh  Properties.hh  Protocol.hh  about.cpp  actioncomponent.cpp  boundseventcomponent.cpp  btnlist.cpp  button.cpp  canvas.cpp  coloredcomponent.cpp  component.cpp  componentregistry.cpp  geoshape.cpp  label.cpp  menu.cpp  msgbox.cpp  notification.cpp  pngcomponent.cpp  textfield.cpp  titledcomponent.cpp  ui.cpp  window.cpp
Libs/LibGraphics/: CMakeLists.txt  Cairo.cc  Cairo.hh  Color.cc  Color.hh  Context.cc  Context.hh  Vbe.cc  Video.cc  Video.hh  cairoutils.cpp  graphics.cpp  vbe.cpp
Libs/LibIO/: CMakeLists.txt  Input.cc  Input.hh  Keyboard.cc  Keyboard.hh  Mouse.cc  Mouse.hh  Ps2.cc  Shell.cc  Shell.hh  keyboard.cpp  mouse.cpp  ps2.cpp  shell.cpp
Libs/LibMain/: Main.cc  Main.hh
Libs/LibMath/: CMakeLists.txt  math.cc  math.h  math_new.cc
Libs/LibRT/: ABISupport.cc  CMakeLists.txt  ErrorCode.hh  Heap.cc  Heap.hh  RT.hh  Runtime.cc  Runtime.hh  SyscallsData.hh  crt0.cc
Libs/LibTC/: Assertions.hh  BitCast.hh  CMakeLists.txt  CharTypes.hh  Concept.hh  Cxx.hh  DenyCopy.hh  DenyMove.hh  Error.cc  Error.hh  Forward.hh  Hashing.cc  Hashing.hh  IntTypes.hh  Math.hh  Math.hhi  Meta.hh  NumericLimits.hh  Prelude.cc  Prelude.hh  SourceLocation.cc  SourceLocation.hh  TypeTraits.hh
Libs/LibTasking/: CMakeLists.txt  Lock.cc  Lock.hh  LockGuard.hh  Tasking.cc  Tasking.hh  Thread.cc  Thread.hh  Timer.cc  Timer.hh  tasking.cpp  thread.cpp  timer.cpp
Libs/LibUnitTest/: Assertions.hh  CMakeLists.txt  Case.cc  Case.hh  Main.cc  Suite.cc  Suite.hh
Libs/LibUtils/: ArgsParser.cc  ArgsParser.hh  Arguments.cc  Arguments.hh  CMakeLists.txt  Environment.cc  Environment.hh  File.cc  File.hh  PropertyFileParser.cc  PropertyFileParser.hh  SHA2.cc  SHA2.hh  Time.cc  TimeSpan.hh  Utils.cc  Utils.hh  arguments.cpp  environment.cpp  fparser.cpp  ipcstream.cpp  sha2.cpp  time.cpp  utils.cpp
Libs/Tasking/: CMakeLists.txt  thread.cpp
Libs/include/: assert.h  complex.h  ctype.h  dir.h  dirent.h  endian.h  errno.h  fcntl.h  float.h  inttypes.h  libgen.h  locale.h  malloc.h  math.h  pthread.h  sched.h  setjmp.h  signal.h  stdalign.h  stdbool.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  tgmath.h  (+4 more)
Userspace/: CMakeLists.txt
(+3873 files in other folders)
