#
# @brief
# This file is part of the MeetiX Operating System.
# Copyright (c) 2017-2021, Marco Cicognani (marco.cicognani@meetixos.org)
#
# @developers
# Marco Cicognani (marco.cicognani@meetixos.org)
#
# @license
# GNU General Public License version 3
#

add_subdirectory(CRTs)
add_subdirectory(LibApi)
add_subdirectory(LibC)
add_subdirectory(LibFmtIO)
add_subdirectory(LibGraphics)
add_subdirectory(LibTC)
add_subdirectory(LibGUI)
add_subdirectory(LibIO)
add_subdirectory(LibMain)
add_subdirectory(LibMath)
add_subdirectory(LibTasking)
add_subdirectory(LibUnitTest)
add_subdirectory(LibUtils)