#
# @brief
# This file is part of the MeetiX Operating System.
# Copyright (c) 2017-2021, Marco Cicognani (marco.cicognani@meetixos.org)
#
# @developers
# Marco Cicognani (marco.cicognani@meetixos.org)
#
# @license
# GNU General Public License version 3
#

add_subdirectory(LibC)
add_subdirectory(LibFmtIO)
add_subdirectory(LibMain)
add_subdirectory(LibMath)
add_subdirectory(LibRT)
add_subdirectory(LibTC)
add_subdirectory(LibUnitTest)
