add_library(GUI
            STATIC
            actioncomponent.cpp
            geoshape.cpp
            boundseventcomponent.cpp
            component.cpp
            componentregistry.cpp
            button.cpp
            ui.cpp
            titledcomponent.cpp
            label.cpp
            btnlist.cpp
            pngcomponent.cpp
            msgbox.cpp
            about.cpp
            textfield.cpp
            coloredcomponent.cpp
            window.cpp
            menu.cpp
            notification.cpp
            canvas.cpp)