add_library(LibApi
            STATIC
            WriteTlsMasterForProcess.c
            Spawn.c
            Getpid.c
            CreateEmptyProcess.c
            Write.c
            WaitForIrq.c
            ConfigureProcess.c
            IpcNextTopic.c
            RamdiskRead.c
            HaltSystem.c
            TaskGetID.c
            GetCreatedProcessID.c
            RamdiskInfo.c
            ReceiveMessage.c
            SetVideoLog.c
            Length.c
            GetThreadTids.c
            LowerMalloc.c
            Exit.c
            GetTid.c
            AtomicTryLock.c
            RegisterSignalHandler.c
            SetWorkingDirectory.c
            __AtomicLock.c
            RamdiskSpawn.c
            RegisterAsServer.c
            CliArgsStore.c
            AtomicBlock.c
            GetExecutablePath.c
            TaskGetIdentifier.c
            AttachCreatedProcess.c
            Seek.c
            AtomicLock.c
            OpenDirectory.c
            RamdiskFind.c
            TaskRegisterID.c
            TaskRequire.c
            ServerManage.c
            AllocMem.c
            RegisterIrqHandler.c
            GetProcessPids.c
            Sbrk.c
            CallVm86.c
            GetPciDevice.c
            GetProcessCount.c
            RamdiskChildCount.c
            GetThreadCount.c
            LowerFree.c
            Tell.c
            TaskFind.c
            RestoreInterruptedState.c
            Yield.c
            Read.c
            Close.c
            CloseDirectory.c
            Millis.c
            RaiseSignal.c
            CreateThread.c
            Fork.c
            ReceiveTransactionMessage.c
            MapMmio.c
            CancelProcessCreation.c
            Pipe.c
            FsSetTransactionStatus.c
            GetThreadDescriptor.c
            Sleep.c
            Join.c
            GetWorkingDirectory.c
            Log.c
            FsRegisterAsDelegate.c
            sysinfo.c
            FsCreateNode.c
            ReadDirectory.c
            GetPciDeviceCount.c
            Open.c
            _internal.c
            CloneFd.c
            GetProcessDescriptor.c
            RamdiskFindChild.c
            SendMessage.c
            RamdiskChildAt.c
            Unmap.c
            Kill.c
            ename.c
            CreatePagesInSpace.c
            ShareMem.c
            GetPidForTid.c
            CliArgsRelease.c
            syscall.c)
add_custom_command(
    TARGET LibApi
    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:LibApi> ${TOOLCHAIN_ROOT}/lib/libapi.a
)
